Create submit script

--- a/yolo_train.ipynb
+++ b/yolo_train.ipynb
@@ -123,7 +123,50 @@
       "Starting training for 5 epochs...\n",
       "\n",
       "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-      "        1/5      13.8G      1.827      2.397      1.445        865        640:  56%|█████▌    | 64/115 [00:44<00:33,  1.53it/s]"
+      "        1/5      13.8G      1.569      1.781      1.294        548        640: 100%|██████████| 115/115 [01:17<00:00,  1.48it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 15/15 [00:10<00:00,  1.50it/s]\n",
+      "                   all        457      14021      0.511      0.461      0.498      0.311\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "        2/5      14.8G       1.24     0.9186      1.061        396        640: 100%|██████████| 115/115 [01:17<00:00,  1.48it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 15/15 [00:09<00:00,  1.54it/s]\n",
+      "                   all        457      14021      0.621      0.577      0.587      0.375\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "        3/5      14.8G      1.225     0.8598      1.041        398        640: 100%|██████████| 115/115 [01:16<00:00,  1.50it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 15/15 [00:09<00:00,  1.55it/s]\n",
+      "                   all        457      14021       0.66      0.578      0.538       0.38\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "        4/5      14.8G      1.136     0.7459      1.004        279        640: 100%|██████████| 115/115 [01:17<00:00,  1.49it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 15/15 [00:09<00:00,  1.56it/s]\n",
+      "                   all        457      14021      0.672      0.687       0.73      0.523\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+      "        5/5      14.8G       1.08     0.6877     0.9756        317        640: 100%|██████████| 115/115 [01:17<00:00,  1.48it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 15/15 [00:18<00:00,  1.20s/it]\n",
+      "                   all        457      14021      0.742      0.672      0.724      0.492\n",
+      "\n",
+      "5 epochs completed in 0.130 hours.\n",
+      "Optimizer stripped from /workspace/runs/detect/train/weights/last.pt, 136.7MB\n",
+      "Optimizer stripped from /workspace/runs/detect/train/weights/best.pt, 136.7MB\n",
+      "\n",
+      "Validating /workspace/runs/detect/train/weights/best.pt...\n",
+      "Ultralytics YOLOv8.0.58 🚀 Python-3.8.13 torch-2.0.0+cu117 CUDA:0 (NVIDIA RTX A4000, 16117MiB)\n",
+      "Model summary (fused): 268 layers, 68133198 parameters, 0 gradients, 257.4 GFLOPs\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 15/15 [00:17<00:00,  1.15s/it]\n",
+      "                   all        457      14021      0.688      0.676       0.73      0.523\n",
+      "             1_overall        457        457      0.984      0.996      0.994      0.936\n",
+      "         2_handwritten        457       2036      0.768      0.781      0.742      0.368\n",
+      "          3_typography        457       1917      0.869      0.587       0.72      0.466\n",
+      "        4_illustration        457        352      0.763      0.685      0.717      0.534\n",
+      "               5_stamp        457         91      0.744      0.747      0.796      0.583\n",
+      "            6_headline        457        375      0.337      0.316      0.266      0.172\n",
+      "             7_caption        457        132          1      0.159      0.586      0.261\n",
+      "            8_textline        457       8659      0.659      0.809      0.755       0.39\n",
+      "               9_table        457          2     0.0703          1      0.995      0.995\n",
+      "Speed: 0.4ms preprocess, 9.2ms inference, 0.0ms loss, 0.9ms postprocess per image\n",
+      "Results saved to \u001b[1m/workspace/runs/detect/train\u001b[0m\n"
      ]
     }
    ],
@@ -137,11 +180,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics YOLOv8.0.58 🚀 Python-3.8.13 torch-2.0.0+cu117 CUDA:0 (NVIDIA RTX A4000, 16117MiB)\n",
+      "Model summary (fused): 268 layers, 68133198 parameters, 0 gradients, 257.4 GFLOPs\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mScanning /workspace/val/labels.cache... 457 images, 0 backgrounds, 0 corrupt: 100%|██████████| 457/457 [00:00<?, ?it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95):   7%|▋         | 2/29 [00:04<01:02,  2.32s/it]WARNING ⚠️ NMS time limit 1.300s exceeded\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 29/29 [00:18<00:00,  1.60it/s]\n",
+      "                   all        457      14021      0.708      0.637       0.69      0.503\n",
+      "             1_overall        457        457      0.987      0.969       0.98      0.925\n",
+      "         2_handwritten        457       2036      0.789      0.768      0.742      0.372\n",
+      "          3_typography        457       1917      0.892       0.58      0.721      0.468\n",
+      "        4_illustration        457        352       0.78      0.605      0.634      0.486\n",
+      "               5_stamp        457         91      0.772      0.747      0.797      0.584\n",
+      "            6_headline        457        375      0.376       0.28      0.255      0.167\n",
+      "             7_caption        457        132          1     0.0349      0.365      0.162\n",
+      "            8_textline        457       8659      0.695      0.749      0.719      0.372\n",
+      "               9_table        457          2     0.0806          1      0.995      0.995\n",
+      "Speed: 0.4ms preprocess, 15.4ms inference, 0.0ms loss, 7.3ms postprocess per image\n",
+      "Results saved to \u001b[1m/workspace/runs/detect/val\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ultralytics.yolo.utils.metrics.DetMetrics object with attributes:\n",
+       "\n",
+       "ap_class_index: array([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+       "box: ultralytics.yolo.utils.metrics.Metric object\n",
+       "confusion_matrix: <ultralytics.yolo.utils.metrics.ConfusionMatrix object at 0x7f4a4d8afe20>\n",
+       "fitness: 0.5220575954738053\n",
+       "keys: ['metrics/precision(B)', 'metrics/recall(B)', 'metrics/mAP50(B)', 'metrics/mAP50-95(B)']\n",
+       "maps: array([    0.50342,     0.92467,     0.37152,     0.46766,     0.48635,     0.58432,     0.16695,     0.16227,       0.372,       0.995])\n",
+       "names: {0: '0_background', 1: '1_overall', 2: '2_handwritten', 3: '3_typography', 4: '4_illustration', 5: '5_stamp', 6: '6_headline', 7: '7_caption', 8: '8_textline', 9: '9_table'}\n",
+       "plot: True\n",
+       "results_dict: {'metrics/precision(B)': 0.7079427443478828, 'metrics/recall(B)': 0.637054306578733, 'metrics/mAP50(B)': 0.6898204577566719, 'metrics/mAP50-95(B)': 0.5034172774423756, 'fitness': 0.5220575954738053}\n",
+       "save_dir: PosixPath('/workspace/runs/detect/val')\n",
+       "speed: {'preprocess': 0.40022184342732836, 'inference': 15.360645966143785, 'loss': 0.0009249806143261933, 'postprocess': 7.349466599312079}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.val()"
+    "model.val"
    ]
   }
  ],
