--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "mode=\"train\"\n",
-    "data_type=\"old\""
+    "data_type=\"mordern\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,11 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for img_path, ann_path, label_path in zip(imgs, annotations, labels):\n",
+    "for img_path, ann_path, label_path in zip(imgs, annotations, labels):    \n",
+    "    img_folder = \"/\".join(img_path.split(\"/\")[:-1])\n",
+    "    ann_folder = \"/\".join(ann_path.split(\"/\")[:-1])\n",
+    "    label_folder = \"/\".join(label_path.split(\"/\")[:-1])\n",
+    "    name = img_path.split(\"/\")[-1].split(\".\")[0]\n",
+    "    dest = img_folder + \"/\" + name + \"_\" + \".jpg\"\n",
+    "    if os.path.exists(dest):\n",
+    "        continue\n",
+    "    df = pd.read_csv(label_path, sep=\" \", header=None)\n",
+    "    df = df[df.loc[:, 0].isin([7, 6] if data_type == \"mordern\" else [5])]\n",
+    "    if df.empty:\n",
+    "        continue\n",
     "    img = im_open(img_path).convert(\"RGB\")\n",
     "    transoforms = torchvision.transforms.Compose([\n",
     "        torchvision.transforms.ToTensor(),\n",
@@ -94,21 +105,12 @@
     "        torchvision.transforms.ColorJitter(brightness=0.5, contrast=0.5, saturation=0.5),\n",
     "        torchvision.transforms.ToPILImage(),        \n",
     "    ])\n",
-    "    df = pd.read_csv(label_path, sep=\" \", header=None)\n",
-    "    df = df[df.loc[:, 0].isin([\"7\", \"6\"])]\n",
-    "    if df.empty:\n",
-    "        continue\n",
-    "    img = transoforms(img)\n",
-    "    img_folder = \"/\".join(img_path.split(\"/\")[:-1])\n",
-    "    ann_folder = \"/\".join(ann_path.split(\"/\")[:-1])\n",
-    "    label_folder = \"/\".join(label_path.split(\"/\")[:-1])\n",
-    "    name = img_path.split(\"/\")[-1].split(\".\")[0]\n",
-    "    dest = img_folder + \"/\" + name + \"_2\" + \".jpg\"\n",
+    "    img = transoforms(img)    \n",
     "    with open(dest, \"w\") as f:\n",
     "        img.save(f)\n",
-    "    dest = ann_folder + \"/\" + name + \"_2\" + \".json\"\n",
+    "    dest = ann_folder + \"/\" + name + \"_\" + \".json\"\n",
     "    subprocess.run(f\"cp {ann_path} {dest}\", shell=True)\n",
-    "    dest = label_folder + \"/\" + name + \"_2\" + \".txt\"\n",
+    "    dest = label_folder + \"/\" + name + \"_\" + \".txt\"\n",
     "    subprocess.run(f\"cp {label_path} {dest}\", shell=True)"
    ]
   }
