--- a/split_test.ipynb
+++ b/split_test.ipynb
@@ -39,7 +39,7 @@
     "    with open(annotation_path, \"r\") as f:\n",
     "        data = json.load(f)\n",
     "        if data[\"attributes\"][\"年代\"] == \"近代\":\n",
-    "            img_dest = os.path.join(\"test\", \"mordern\", \"images\")\n",
+    "            img_dest = os.path.join(\"test\", \"modern\", \"images\")\n",
     "        else:\n",
     "            img_dest = os.path.join(\"test\", \"old\", \"images\")\n",
     "        os.makedirs(img_dest, exist_ok=True)\n",
