--- a/yolo_train.ipynb
+++ b/yolo_train.ipynb
@@ -80,8 +80,8 @@
    "source": [
     "data_path=\"/workspace/modern_book.yaml\"\n",
     "weight_path=\"/workspace/yolov8x.pt\"\n",
-    "out_path=\"/workspace/results/train_mordern_book\"\n",
-    "command=f'yolo detect train model={weight_path} data={data_path} epochs=30 imgsz=1200 lr0=\"0.01\" lrf=\"0.0005\" project=\"{out_path}\" device=\"0,1,2,3\"'\n",
+    "out_path=\"/workspace/results/train_modern_book\"\n",
+    "command=f'yolo detect train model={weight_path} data={data_path} epochs=30 imgsz=1600 batch=8 lr0=\"0.01\" lrf=\"0.0005\" project=\"{out_path}\" device=\"0,1,2,3\"'\n",
     "# subprocess.run(command, shell=True)"
    ]
   },
@@ -283,7 +283,7 @@
     "data_path=\"/workspace/old_book.yaml\"\n",
     "weight_path=\"/workspace/yolov8x.pt\"\n",
     "out_path=\"/workspace/results/train_old_book\"\n",
-    "command=f'yolo detect train model={weight_path} data={data_path} epochs=20 imgsz=1200 lr0=\"0.01\" lrf=\"0.0005\" project=\"{out_path}\" device=\"0,1,2,3\"'\n",
+    "command=f'yolo detect train model={weight_path} data={data_path} epochs=20 imgsz=1600 batch=8 lr0=\"0.01\" lrf=\"0.0005\" project=\"{out_path}\" device=\"0,1,2,3\"'\n",
     "subprocess.run(command, shell=True)"
    ]
   }
