Fix ids of images generated by augmentation

--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "    ann_folder = \"/\".join(ann_path.split(\"/\")[:-1])\n",
     "    label_folder = \"/\".join(label_path.split(\"/\")[:-1])\n",
     "    name = img_path.split(\"/\")[-1].split(\".\")[0]\n",
-    "    dest = img_folder + \"/\" + name + \"_\" + \".jpg\"\n",
+    "    dest = img_folder + \"/\" + \"1\" + name + \".jpg\"\n",
     "    if os.path.exists(dest):\n",
     "        continue\n",
     "    df = pd.read_csv(label_path, sep=\" \", header=None)\n",
@@ -68,9 +68,9 @@
     "    if df.empty:\n",
     "        continue\n",
     "    subprocess.run(f\"cp {img_path} {dest}\", shell=True)\n",
-    "    dest = ann_folder + \"/\" + name + \"_\" + \".json\"\n",
+    "    dest = ann_folder + \"/\" + \"1\" + name + \".json\"\n",
     "    subprocess.run(f\"cp {ann_path} {dest}\", shell=True)\n",
-    "    dest = label_folder + \"/\" + name + \"_\" + \".txt\"\n",
+    "    dest = label_folder + \"/\" + \"1\" + name + \".txt\"\n",
     "    subprocess.run(f\"cp {label_path} {dest}\", shell=True)"
    ]
   }
