--- a/yolo_train.ipynb
+++ b/yolo_train.ipynb
@@ -67,8 +67,10 @@
     "model.train(\n",
     "    data=data_path,\n",
     "    epochs=40,\n",
-    "    imgsz=1200,\n",
+    "    imgsz=1600,\n",
+    "    batch=4,\n",
     "    lr0=0.01,\n",
+    "    lrf=0.005,\n",
     "    project=out_path,\n",
     "    device=\"0,1,2,3\"\n",
     ")\n",
@@ -91,7 +93,9 @@
     "model.train(\n",
     "    data=data_path,\n",
     "    epochs=40,\n",
-    "    imgsz=1200,\n",
+    "    imgsz=1600,\n",
+    "    batch=4,\n",
+    "    lrf=0.005,\n",
     "    lr0=0.01,\n",
     "    project=out_path,\n",
     "    device=\"0,1,2,3\"\n",
