--- a/train.ipynb
+++ b/train.ipynb
@@ -270,7 +270,7 @@
     "    learning_rate = 1e-4\n",
     "    weight_decay = 1e-5\n",
     "    num_classes = 10\n",
-    "    input_size = (800, 800)\n",
+    "    input_size = (1600, 1600)\n",
     "    \n",
     "    def __init__(self) -> None:\n",
     "        pass\n",
@@ -478,11 +478,11 @@
     "import pathlib\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "annotation_path = pathlib.Path(\"train_annotations\") / \"*.json\"\n",
+    "annotation_path = pathlib.Path(\"train\") / \"annotations\" / \"*.json\"\n",
     "labels = list(glob(annotation_path.absolute().as_posix()))\n",
     "new_labels = []\n",
     "\n",
-    "images_path = pathlib.Path(\"train_images\") / \"*.jpg\"\n",
+    "images_path = pathlib.Path(\"train\") / \"images\" / \"*.jpg\"\n",
     "images = list(glob(images_path.absolute().as_posix()))\n",
     "# new_images = []\n",
     "# for i in range(len(images)):\n",
@@ -22225,7 +22225,7 @@
    "source": [
     "import time\n",
     "\n",
-    "torch.save(model, f'model_weight-{time.time()}.pth')"
+    "torch.save(model, f'faster_rcnn_weight-{time.time()}.pth')"
    ]
   }
  ],
