Try use different label map

--- a/add_padding.ipynb
+++ b/add_padding.ipynb
@@ -54,17 +54,18 @@
     "from torchvision.transforms import *\n",
     "import pathlib\n",
     "\n",
-    "for mode in [\"train\"]:\n",
-    "    p = pathlib.Path(\"/workspace/\" + mode)\n",
-    "    images = p / \"images\"\n",
-    "    imgs = list(images.glob(\"*.jpg\"))\n",
-    "    for img_path in imgs:\n",
-    "        img = im_open(img_path).convert(\"RGB\")\n",
-    "        img = Compose([\n",
-    "            NewPad() \n",
-    "        ])(img)\n",
-    "        with img_path.open() as f:\n",
-    "            img.save(f.name)"
+    "for mode in [\"test\"]:\n",
+    "    for type in [\"modern\", \"old\"]:\n",
+    "        p = pathlib.Path(\"/workspace/\" + mode)\n",
+    "        images = p / type / \"images\"\n",
+    "        imgs = list(images.glob(\"*.jpg\"))\n",
+    "        for img_path in imgs:\n",
+    "            img = im_open(img_path).convert(\"RGB\")\n",
+    "            img = Compose([\n",
+    "                NewPad() \n",
+    "            ])(img)\n",
+    "            with img_path.open() as f:\n",
+    "                img.save(f.name)"
    ]
   }
  ],
