--- a/yolo_train.ipynb
+++ b/yolo_train.ipynb
@@ -58,24 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path=\"/workspace/modern_book.yaml\"\n",
-    "weight_path=\"/workspace/yolov8x.pt\"\n",
-    "out_path=\"/workspace/results/train_modern_book\"\n",
-    "model = YOLO(weight_path)\n",
-    "for event,func in callbacks.items():\n",
-    "    model.add_callback(event,func)\n",
-    "model.train(\n",
-    "    data=data_path,\n",
-    "    epochs=40,\n",
-    "    imgsz=1600,\n",
-    "    batch=4,\n",
-    "    lr0=0.01,\n",
-    "    lrf=0.005,\n",
-    "    project=out_path,\n",
-    "    device=\"0,1,2,3\"\n",
-    ")\n",
-    "# command=f'yolo detect train model={weight_path} data={data_path} epochs=30 imgsz=1600 batch=8 lr0=\"0.01\" project=\"{out_path}\" device=\"0,1,2,3\"'\n",
-    "# subprocess.run(command, shell=True)\n"
+    "mode = \"modern\"\n",
+    "use_yolo_pretrained = False"
    ]
   },
   {
@@ -84,9 +68,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path=\"/workspace/old_book.yaml\"\n",
-    "weight_path=\"/workspace/yolov8x.pt\"\n",
-    "out_path=\"/workspace/results/train_old_book\"\n",
+    "if mode == \"modern\":\n",
+    "    data_path=\"/workspace/modern_book.yaml\"\n",
+    "    if use_yolo_pretrained:\n",
+    "        weight_path=\"/workspace/yolov8x.pt\"\n",
+    "    else:\n",
+    "        weight_path=\"/workspace/yolo_modern_weights-base.pt\"\n",
+    "    out_path=\"/workspace/results/train_modern_book\"\n",
+    "    model = YOLO(weight_path)\n",
+    "    for event,func in callbacks.items():\n",
+    "        model.add_callback(event,func)\n",
+    "    model.train(\n",
+    "        data=data_path,\n",
+    "        epochs=40 if not use_yolo_pretrained else 10,\n",
+    "        imgsz=1200,\n",
+    "        batch=16,\n",
+    "        lr0=0.01,\n",
+    "        lrf=0.005 if not use_yolo_pretrained else 0.01,\n",
+    "        image_weights=True,\n",
+    "        project=out_path,\n",
+    "        device=\"0,1,2,3\"\n",
+    "    )\n",
+    "    # command=f'yolo detect train model={weight_path} data={data_path} epochs=30 imgsz=1600 batch=8 lr0=\"0.01\" project=\"{out_path}\" device=\"0,1,2,3\"'\n",
+    "    # subprocess.run(command, shell=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if mode == \"old\":\n",
+    "    data_path=\"/workspace/old_book.yaml\"\n",
+    "    \n",
+    "    if use_yolo_pretrained:\n",
+    "        weight_path=\"/workspace/yolov8x.pt\"\n",
+    "    else:\n",
+    "        weight_path=\"/workspace/yolo_old_weights-base.pt\"\n",
+    "    out_path=\"/workspace/results/train_old_book\"\n",
+    "    model = YOLO(weight_path)\n",
+    "    for event,func in callbacks.items():\n",
+    "        model.add_callback(event,func)\n",
+    "    model.train(\n",
+    "        data=data_path,\n",
+    "        epochs=40 if not use_yolo_pretrained else 10,\n",
+    "        imgsz=1200,\n",
+    "        batch=16,\n",
+    "        lr0=0.01,\n",
+    "        lrf=0.005 if not use_yolo_pretrained else 0.01,\n",
+    "        project=out_path,\n",
+    "        image_weights=True,\n",
+    "        device=\"0,1,2,3\"\n",
+    "    )\n",
+    "    # command=f'yolo detect train model={weight_path} data={data_path} epochs=30 imgsz=1600 batch=8 lr0=\"0.01\" project=\"{out_path}\" device=\"0,1,2,3\"'\n",
+    "    # subprocess.run(command, shell=True)\n",
+    "\n",
+    "\n",
     "model = YOLO(weight_path)\n",
     "for event,func in callbacks.items():\n",
     "    model.add_callback(event,func)\n",
