Try emsemble with yolov5

--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,28 +51,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10):\n",
-    "    for img_path, ann_path, label_path in zip(imgs, annotations, labels):    \n",
-    "        img_folder = \"/\".join(img_path.split(\"/\")[:-1])\n",
-    "        ann_folder = \"/\".join(ann_path.split(\"/\")[:-1])\n",
-    "        label_folder = \"/\".join(label_path.split(\"/\")[:-1])\n",
-    "        name = img_path.split(\"/\")[-1].split(\".\")[0]\n",
-    "        dest = img_folder + \"/\" + \"1\" + name + \".jpg\"\n",
-    "        if os.path.exists(dest):\n",
-    "            continue\n",
-    "        df = pd.read_csv(label_path, sep=\" \", header=None)\n",
-    "        df = df[df.loc[:, 0].isin([4, 5, 7, 8] if data_type == \"modern\" else [4, 5])]\n",
-    "        if df.empty:\n",
-    "            continue\n",
-    "        subprocess.run(f\"cp {img_path} {dest}\", shell=True)\n",
-    "        dest = ann_folder + \"/\" + \"1\" + name + \".json\"\n",
-    "        subprocess.run(f\"cp {ann_path} {dest}\", shell=True)\n",
-    "        dest = label_folder + \"/\" + \"1\" + name + \".txt\"\n",
-    "        subprocess.run(f\"cp {label_path} {dest}\", shell=True)"
+    "\n",
+    "for img_path, ann_path, label_path in zip(imgs, annotations, labels):    \n",
+    "    img_folder = \"/\".join(img_path.split(\"/\")[:-1])\n",
+    "    ann_folder = \"/\".join(ann_path.split(\"/\")[:-1])\n",
+    "    label_folder = \"/\".join(label_path.split(\"/\")[:-1])\n",
+    "    name = img_path.split(\"/\")[-1].split(\".\")[0]\n",
+    "    dest = img_folder + \"/\" + \"2\" + name + \".jpg\"\n",
+    "    if os.path.exists(dest):\n",
+    "        continue\n",
+    "    df = pd.read_csv(label_path, sep=\" \", header=None)\n",
+    "    df = df[df.loc[:, 0].isin([4, 5] if data_type == \"modern\" else [4, 5])]\n",
+    "    if df.empty:\n",
+    "        continue\n",
+    "    subprocess.run(f\"cp {img_path} {dest}\", shell=True)\n",
+    "    dest = ann_folder + \"/\" + \"2\" + name + \".json\"\n",
+    "    subprocess.run(f\"cp {ann_path} {dest}\", shell=True)\n",
+    "    dest = label_folder + \"/\" + \"2\" + name + \".txt\"\n",
+    "    subprocess.run(f\"cp {label_path} {dest}\", shell=True)"
    ]
   }
  ],
