--- a/yolo_train.ipynb
+++ b/yolo_train.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "if mode == \"modern\":\n",
     "    data_path=\"/workspace/modern_book.yaml\"\n",
-    "    if use_yolo_pretrained:\n",
+    "    if not use_yolo_pretrained:\n",
     "        weight_path=\"/workspace/yolov8x.pt\"\n",
     "    else:\n",
     "        weight_path=\"/workspace/yolo_modern_weights-base.pt\"\n",
@@ -102,7 +102,7 @@
     "if mode == \"old\":\n",
     "    data_path=\"/workspace/old_book.yaml\"\n",
     "    \n",
-    "    if use_yolo_pretrained:\n",
+    "    if not use_yolo_pretrained:\n",
     "        weight_path=\"/workspace/yolov8x.pt\"\n",
     "    else:\n",
     "        weight_path=\"/workspace/yolo_old_weights-base.pt\"\n",
@@ -122,24 +122,7 @@
     "        device=\"0,1,2,3\"\n",
     "    )\n",
     "    # command=f'yolo detect train model={weight_path} data={data_path} epochs=30 imgsz=1600 batch=8 lr0=\"0.01\" project=\"{out_path}\" device=\"0,1,2,3\"'\n",
-    "    # subprocess.run(command, shell=True)\n",
-    "\n",
-    "\n",
-    "model = YOLO(weight_path)\n",
-    "for event,func in callbacks.items():\n",
-    "    model.add_callback(event,func)\n",
-    "model.train(\n",
-    "    data=data_path,\n",
-    "    epochs=40,\n",
-    "    imgsz=1600,\n",
-    "    batch=4,\n",
-    "    lrf=0.005,\n",
-    "    lr0=0.01,\n",
-    "    project=out_path,\n",
-    "    device=\"0,1,2,3\"\n",
-    ")\n",
-    "# command=f'yolo detect train model={weight_path} data={data_path} epochs=30 imgsz=1600 batch=8 lr0=\"0.01\" project=\"{out_path}\" device=\"0,1,2,3\"'\n",
-    "# subprocess.run(command, shell=True)"
+    "    # subprocess.run(command, shell=True)"
    ]
   }
  ],
