--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src=os.path.join(\"/workspace\", mode, data_type)\n",
+    "src=os.path.join(\"/home/fummicc1/codes/signate\", mode, data_type)\n",
     "label_paths = os.path.join(src, \"labels\")\n",
     "annotation_paths = os.path.join(src, \"annotations\")\n",
     "img_paths = os.path.join(src, \"images\")"
@@ -92,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
