--- a/add_padding.ipynb
+++ b/add_padding.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -14,6 +14,16 @@
                 "    max_wh = np.max([w, h])\n",
                 "    h_padding = (max_wh - w) / 2\n",
                 "    v_padding = (max_wh - h) / 2    \n",
+                "    r_pad = h_padding if h_padding % 1 == 0 else h_padding-0.5\n",
+                "    b_pad = v_padding if v_padding % 1 == 0 else v_padding-0.5\n",
+                "    r_pad *= 2\n",
+                "    b_pad *= 2\n",
+                "    padding = (0, 0, int(r_pad), int(b_pad))\n",
+                "    return padding\n",
+                "def adjust_imgsz_with(image, ideal_width, ideal_height):   \n",
+                "    w, h = image.size\n",
+                "    h_padding = (w - ideal_width) / 2\n",
+                "    v_padding = (h - ideal_height) / 2\n",
                 "    r_pad = h_padding if h_padding % 1 == 0 else h_padding-0.5\n",
                 "    b_pad = v_padding if v_padding % 1 == 0 else v_padding-0.5\n",
                 "    r_pad *= 2\n",
@@ -36,7 +46,8 @@
                 "        Returns:\n",
                 "            PIL Image: Padded image.\n",
                 "        \"\"\"\n",
-                "        return F.pad(img, get_padding(img), self.fill, self.padding_mode)\n",
+                "        width, height = img.size\n",
+                "        return F.pad(img, adjust_imgsz_with(img, width // 32 * 32, height // 32 * 32), self.fill, self.padding_mode)\n",
                 "    \n",
                 "    def __repr__(self):\n",
                 "        return self.__class__.__name__ + '(padding={0}, fill={1}, padding_mode={2})'.\\\n",
@@ -45,7 +56,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -61,11 +72,13 @@
                 "        imgs = list(images.glob(\"*.jpg\"))\n",
                 "        for img_path in imgs:\n",
                 "            img = im_open(img_path).convert(\"RGB\")\n",
-                "            img = Compose([\n",
-                "                NewPad() \n",
-                "            ])(img)\n",
-                "            with img_path.open() as f:\n",
-                "                img.save(f.name)"
+                "            # img = Compose([\n",
+                "            #     NewPad() \n",
+                "            # ])(img)\n",
+                "            # with img_path.open() as f:\n",
+                "            #     img.save(f.name)\n",
+                "            assert img.width % 32 == 0\n",
+                "            assert img.height % 32 == 0"
             ]
         }
     ],
@@ -85,7 +98,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.13"
+            "version": "3.10.9"
         },
         "orig_nbformat": 4
     },
