Update augmentation for segmentation

--- a/segmentation_old.ipynb
+++ b/segmentation_old.ipynb
@@ -75,9 +75,11 @@
    "outputs": [],
    "source": [
     "def get_training_augmentation():\n",
-    "    train_transform = [\n",
+    "    train_transform = [               \n",
+    "        albu.RandomScale(),\n",
+    "        albu.ToGray(),                \n",
     "        albu.PadIfNeeded(min_height=960, min_width=960, always_apply=True, border_mode=0),\n",
-    "        albu.RandomCrop(height=960, width=960, always_apply=True)\n",
+    "        albu.RandomCrop(height=960, width=960, always_apply=True),\n",
     "    ]\n",
     "    return albu.Compose(train_transform)\n",
     "    \n",
@@ -266,7 +268,7 @@
     ")\n",
     "\n",
     "# データローダーの作成\n",
-    "train_loader = DataLoader(train_dataset, batch_size=4, shuffle=True, num_workers=12)"
+    "train_loader = DataLoader(train_dataset, batch_size=4, shuffle=True, num_workers=0)"
    ]
   },
   {
@@ -286,7 +288,7 @@
     ")\n",
     "\n",
     "# データローダーの作成\n",
-    "val_loader = DataLoader(val_dataset, batch_size=4, shuffle=False, num_workers=12)"
+    "val_loader = DataLoader(val_dataset, batch_size=4, shuffle=False, num_workers=0)"
    ]
   },
   {
@@ -319,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 20\n",
+    "epochs = 50\n",
     "max_score = 0\n",
     "\n",
     "if not pathlib.Path(\"best_model_old.pth\").exists():\n",
