--- a/segmentation_modern.ipynb
+++ b/segmentation_modern.ipynb
@@ -67,8 +67,10 @@
    "source": [
     "def get_training_augmentation():\n",
     "    train_transform = [\n",
+    "        albu.RandomScale(),\n",
+    "        albu.ToGray(),                \n",
     "        albu.PadIfNeeded(min_height=960, min_width=960, always_apply=True, border_mode=0),\n",
-    "        albu.RandomCrop(height=960, width=960, always_apply=True)\n",
+    "        albu.RandomCrop(height=960, width=960, always_apply=True),\n",
     "    ]\n",
     "    return albu.Compose(train_transform)\n",
     "    \n",
@@ -119,7 +121,7 @@
     "ENCODER = 'resnet50'\n",
     "ENCODER_WEIGHTS = 'imagenet'\n",
     "ACTIVATION = \"softmax\"\n",
-    "CLASS_MAP = {  \n",
+    "CLASS_MAP = {\n",
     "  0: \"0_background\",\n",
     "  1: \"2_handwritten\",\n",
     "  2: \"3_typography\",\n",
@@ -260,7 +262,7 @@
     ")\n",
     "\n",
     "# データローダーの作成\n",
-    "train_loader = DataLoader(train_dataset, batch_size=4, shuffle=True, num_workers=12)"
+    "train_loader = DataLoader(train_dataset, batch_size=4, shuffle=True, num_workers=0)"
    ]
   },
   {
@@ -280,7 +282,7 @@
     ")\n",
     "\n",
     "# データローダーの作成\n",
-    "val_loader = DataLoader(test_dataset, batch_size=4, shuffle=False, num_workers=12)"
+    "val_loader = DataLoader(test_dataset, batch_size=4, shuffle=False, num_workers=0)"
    ]
   },
   {
@@ -313,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 20\n",
+    "epochs = 50\n",
     "max_score = 0\n",
     "\n",
     "if not pathlib.Path(\"best_model_modern.pth\").exists():\n",
